Fork for Twitter, based on a similar list of accounts
Readme and the remaining files will follow

--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
 	"manifest_version": 2,
-	"name": "MetaBot chrome plugin for YouTube",
-	"version": "1.1.2",
-	"description": "More information about users and videos on YouTube.",
-	"update_url": "https://raw.githubusercontent.com/CupIvan/metabot/master/updates.xml",
+	"name": "MetaBot for Twitter",
+	"version": "0.0.1",
+	"description": "Highlight known Kremlin bots on Twitter.",
 	"content_scripts": [{
-		"matches": ["https://*.youtube.com/*"],
+		"matches": ["https://*.twitter.com/*"],
 		"js": ["bot_accounts.js", "metabot.js"],
 		"run_at": "document_idle"
 	}]
