--- a/metabotTwitter/manifest.json
+++ b/metabotTwitter/manifest.json
@@ -3,7 +3,7 @@
 	"name": "MetaBot for Twitter",
 	"version": "0.1.3",
 	"description": "Highlight known Kremlin bots on Twitter.",
-	"update_url": "https://https://raw.githubusercontent.com/antibot4navalny/metabot/master/updates.xml",
+	"update_url": "https://raw.githubusercontent.com/antibot4navalny/metabot/master/updates.xml",
 	"content_scripts": [{
 		"matches": ["https://*.twitter.com/*"],
 		"js": ["bot_accounts.js", "metabot.js"],
