--- a/manifest.template.json
+++ b/manifest.template.json
@@ -4,9 +4,11 @@
 	"version": "VVVVVV",
 	"description": "Highlight known Kremlin bots on Twitter.",
 	"update_url": "https://raw.githubusercontent.com/antibot4navalny/metabot/master/updates.xml",
-	"content_scripts": [{
+	"content_scripts": [
+	  {
 		"matches": ["https://*.twitter.com/*"],
-		"js": ["bot_accounts.js", "metabot.js"],
+		"js": ["purify.min.js", "bot_accounts.js", "metabot.js"],
 		"run_at": "document_idle"
-	}]
+	  }
+	]
 }
