+mozilla credentials; experimental folders

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,9 @@ for_Chrome_Store/manifest.json
 metabotTwitter.zip
 package-lock.json
 set_chrome_web_store_credentials.sh
+set_mozilla_AMO_credentials.sh
 .*
 node_modules/*
+web-ext-xpmt
+web-ext-artifacts
+Firefox_tmp
