suggest to complete a survey in case of uninstallation

--- a/manifest.template.json
+++ b/manifest.template.json
@@ -11,5 +11,9 @@
 		"js": ["purify.min.js", "bot_accounts.js", "metabot.js"],
 		"run_at": "document_idle"
 	  }
-	]
+	],
+	"background": {
+	    "scripts": ["background.js"],
+	    "persistent": false
+	}
 }
