--- a/metabotTwitter/manifest.json
+++ b/metabotTwitter/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 2,
 	"name": "MetaBot for Twitter",
-	"version": "0.3.0",
+	"version": "0.4.0",
 	"description": "Highlight known Kremlin bots on Twitter.",
 	"author": "antibot4navalny",
 	"update_url": "https://raw.githubusercontent.com/antibot4navalny/metabot/master/updates.xml",
@@ -11,5 +11,9 @@
 		"js": ["purify.min.js", "bot_accounts.js", "metabot.js"],
 		"run_at": "document_idle"
 	  }
-	]
+	],
+	"background": {
+	    "scripts": ["background.js"],
+	    "persistent": false
+	}
 }
