--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,10 @@ package-lock.json
 set_chrome_web_store_credentials.sh
 set_mozilla_AMO_credentials.sh
 set_local_source_for_validated_bots.sh
-.*
 node_modules/*
 web-ext-xpmt
 web-ext-artifacts
 Firefox_tmp
 unused/*
+.*
+!.gitignore
