--- a/manifest.template.json
+++ b/manifest.template.json
@@ -8,12 +8,23 @@
 	"content_scripts": [
 	  {
 		"matches": ["https://*.twitter.com/*"],
-		"js": ["purify.min.js", "bot_accounts.js", "metabot.js"],
+		"js": ["purify.min.js", "url_templates.js", "common.js", "bot_accounts.js", "metabot.js"],
 		"run_at": "document_idle"
+	  },
+	  {
+		"matches": ["https://*.twitter.com/*"],
+		"js": ["url_templates.js", "common.js", "save_usage_telemetry.js"],
+		"run_at": "document_end"
 	  }
 	],
 	"background": {
-	    "scripts": ["background.js"],
+	    "scripts": ["url_templates.js", "common.js", "background.js", "hot-reload.js"],
 	    "persistent": false
-	}
+	},
+	
+	"browser_specific_settings": { "gecko": { "id": "bots_commenting_navalny@protonmail.com", "strict_min_version": "66.0"} },
+
+	"permissions": [
+		"storage"
+	]
 }
