--- a/metabotTwitter/manifest.json
+++ b/metabotTwitter/manifest.json
@@ -1,19 +1,30 @@
 {
 	"manifest_version": 2,
 	"name": "MetaBot for Twitter",
-	"version": "0.4.26",
+	"version": "0.5.16",
 	"description": "Highlight known Kremlin bots on Twitter.",
 	"author": "antibot4navalny",
 	"update_url": "https://raw.githubusercontent.com/antibot4navalny/metabot/master/updates.xml",
 	"content_scripts": [
 	  {
 		"matches": ["https://*.twitter.com/*"],
-		"js": ["purify.min.js", "bot_accounts.js", "metabot.js"],
+		"js": ["purify.min.js", "url_templates.js", "common.js", "bot_accounts.js", "metabot.js"],
 		"run_at": "document_idle"
+	  },
+	  {
+		"matches": ["https://*.twitter.com/*"],
+		"js": ["url_templates.js", "common.js", "save_usage_telemetry.js"],
+		"run_at": "document_end"
 	  }
 	],
 	"background": {
-	    "scripts": ["background.js"],
+	    "scripts": ["url_templates.js", "common.js", "background.js", "hot-reload.js"],
 	    "persistent": false
-	}
+	},
+	
+	"browser_specific_settings": { "gecko": { "id": "bots_commenting_navalny@protonmail.com", "strict_min_version": "66.0"} },
+
+	"permissions": [
+		"storage"
+	]
 }
