--- a/manifest.template.json
+++ b/manifest.template.json
@@ -22,7 +22,7 @@
 	    "persistent": false
 	},
 	
-	"browser_specific_settings": { "gecko": { "id": "bots_commenting_navalny@protonmail.com", "strict_min_version": "66.0"} },
+	"browser_specific_settings": { "gecko": { "id": "{d20acea6-2744-4763-bb1c-f62924e40073}", "strict_min_version": "66.0"} },
 
 	"permissions": [
 		"storage"
