prepare separate read-only copy for Firefox, as its manifest is too incompatible from Chrome/Opera

--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,10 @@
 ### No value to store, intermediary files
 
 metabotTwitter/manifest.json
-for_Chrome_Store/manifest.json
-TMP_for_Chrome_Store/
 metabotTwitter.zip
+Firefox_readonly_copy
 Firefox.zip
 .DS_Store
-Firefox_tmp
 bot_accounts*.csv
 .*
 
