update name for Firefox packed-for-debug extension

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 metabotTwitter.zip
 Firefox_readonly_copy/*
 ChromeOpera_readonly_copy/*
-Firefox.zip
+FirefoxTestBuild.zip
 .DS_Store
 bot_accounts*.csv
 .*
