--- a/manifest.template.json
+++ b/manifest.template.json
@@ -8,23 +8,34 @@
 	"content_scripts": [
 	  {
 		"matches": ["https://*.twitter.com/*"],
-		"js": ["purify.min.js", "url_templates.js", "common.js", "bot_accounts.js", "metabot.js"],
+		"js": [
+			"purify.min.js",
+			"flags.js",
+			"url_templates.js",
+			"common.js",
+			"bot_accounts.js",
+			"metabot.js"],
 		"run_at": "document_idle"
 	  },
 	  {
 		"matches": ["https://*.twitter.com/*"],
-		"js": ["url_templates.js", "common.js", "save_usage_telemetry.js"],
+		"js": [
+			"url_templates.js",
+			"flags.js",
+			"common.js",
+			"save_usage_telemetry.js"],
 		"run_at": "document_end"
 	  }
 	],
 	"background": {
+		"persistent": false,
 		"scripts": [
 			"url_templates.js",
+			"flags.js",
 			"common.js",
 			"hot-reload.js",
-			"background.js",
-		],
-		"persistent": false
+			"background.js"
+		]
 	},
 	
 	"browser_specific_settings": { "gecko": { "id": "{d20acea6-2744-4763-bb1c-f62924e40073}", "strict_min_version": "66.0"} },
