--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ unused/*
 
 
 ###  Private credentials, for no repository whatsoever
+credentials/*
 set_chrome_web_store_credentials.sh
 set_mozilla_AMO_credentials.sh
 set_local_source_for_validated_bots.sh
