--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.git*
 !.gitignore
 
 ### Pending release
@@ -12,7 +13,6 @@ ChromeOpera_readonly_copy/*
 FirefoxTestBuild.zip
 .DS_Store
 bot_accounts*.csv
-.*
 twarc.log
 
 package-lock.json
