--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 ### No value to store, intermediary files
 
 releases/forChromeWebStore.zip
+releases/*.xpi
 releases/forFirefoxAMO/*
 releases/ChromeOpera_debug_and_WebStore/*
 releases/Firefox_local_debug.zip
