--- a/metadata/manifest.template.json
+++ b/metadata/manifest.template.json
@@ -1,10 +1,20 @@
 {
 	"manifest_version": 2,
-	"name": "MetaBot for Twitter",
+
+	"name.channel_dependent": {
+	  "stable": "MetaBot for Twitter",
+	  "early": "MetaBot for Twitter (Early Access)"
+	},
+
 	"version": "VVVVVV",
 	"description": "Highlight known Kremlin bots on Twitter.",
 	"author": "antibot4navalny",
-	"update_url": "https://raw.githubusercontent.com/antibot4navalny/metabot/master/updates.xml",
+
+	// Chrome, _public_ self-hosted releases
+	"update_url.channel_dependent": {
+	  "stable": "https://raw.githubusercontent.com/antibot4navalny/metabot/master/updates.xml"
+	},
+
 	"content_scripts": [
 	  {
 		"matches": ["https://*.twitter.com/*"],
@@ -30,13 +40,22 @@
 		]
 	},
 
-  "web_accessible_resources": [
-      "assets/labels.json"
-  ],
+	"web_accessible_resources": [
+		"assets/labels.json"
+	],
 	
 	"permissions": [
 		"storage"
 	],
 
-	"browser_specific_settings": { "gecko": { "id": "{d20acea6-2744-4763-bb1c-f62924e40073}", "strict_min_version": "66.0"} }
+	// Firefox only
+	"browser_specific_settings": {
+		"gecko": {
+			"id.channel_dependent": {
+				"stable": "{d20acea6-2744-4763-bb1c-f62924e40073}",
+				"early": "{b4ab8398-6a60-41a2-91e2-09eb79a5d153}"
+			},
+			"strict_min_version": "66.0"
+		}
+	}
 }
