web-hosted labels: periodically fetch updates; use for highlighting

--- a/metadata/manifest.template.json
+++ b/metadata/manifest.template.json
@@ -32,12 +32,8 @@
 	],
 	
 	"background": {
-		"persistent": false,
-		"scripts": [
-			"common.js",
-			"hot-reload.js",
-			"background.js"
-		]
+		"page": "background.html",
+		"persistent": false
 	},
 
 	"web_accessible_resources": [
