--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,13 @@
 releases/forChromeWebStore.zip
 releases/*.xpi
 releases/forFirefoxAMO/*
+releases/forFirefoxAMO_manifestV3/*
 releases/ChromeOpera_debug_and_WebStore/*
 releases/Firefox_local_debug.zip
+releases/Firefox_manifestV3_local_debug.zip
+
+
+
 .DS_Store
 bot_accounts*.csv
 twarc.log
