switch to manifest _V3_ for Firefox; detail browser specific as comments in manifest rather than in build script

--- a/metadata/manifest3.template.json
+++ b/metadata/manifest3.template.json
@@ -29,6 +29,10 @@
 	],
 
   "background": {
+     // Firefox only:
+     "page": "background.html",
+     
+    // Chrome only:
     "service_worker": "background.js",
     "type": "module"
   },
