--- a/metadata/manifest.template.json
+++ b/metadata/manifest.template.json
@@ -17,7 +17,10 @@
 
 	"content_scripts": [
 	  {
-		"matches": ["https://*.twitter.com/*"],
+		"matches": [
+		  "https://*.twitter.com/*",
+		  "https://*.x.com/*"
+		],
 		"js": [
 			"metabot.js"],
 		"run_at": "document_idle"
