--- a/metadata/manifest3.template.json
+++ b/metadata/manifest3.template.json
@@ -17,7 +17,10 @@
 
 	"content_scripts": [
 	  {
-		"matches": ["https://*.twitter.com/*"],
+		"matches": [
+		  "https://*.twitter.com/*",
+		  "https://*.x.com/*"
+		],
 		"js": [
 			"metabot.js"],
 		"run_at": "document_idle"
@@ -56,7 +59,10 @@
   "web_accessible_resources": [
     {
       "resources": ["assets/labels.json", "common_impex.js"],
-      "matches": ["https://*.twitter.com/*"]
+      "matches": [
+        "https://*.twitter.com/*",
+        "https://*.x.com/*"
+      ]
     }
   ]
 }
